--- a/projeto-glass-html5/index.html
+++ b/projeto-glass-html5/index.html
@@ -75,8 +75,10 @@
 
         <p>Além da surpresa do áudio, a tela montada a frente do olho do usuário também chamou atenção. Serão 640 x 360 pixels de resolução que, em proporção, equivaleria a um monitor de 25 polegadas de alta definição colocado a 2,5 metros de distância do espectador.</p>
 
-        Copyright 2013 - by Gustavo Guanabara
-        Facebook | Twitter
+        <footer>
+            Copyright 2013 - by Gustavo Guanabara
+            Facebook | Twitter
+        </footer>
     </div>
 </body>
 </html>
