--- a/projeto-glass-html5/index.html
+++ b/projeto-glass-html5/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Tudo sobre o Google Glass</title>
+    <script src="_javascript/funcoes.js" defer></script>
     <link rel="stylesheet" type="text/css" href="_css/estilo.css">
 </head>
 <body>
