--- a/projeto-glass-html5/fotos.html
+++ b/projeto-glass-html5/fotos.html
@@ -1,14 +1,36 @@
-Google Glass
-A revolução do Google está chegando
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Tudo sobre o Google Glass</title>
+    <script src="_javascript/funcoes.js" defer></script>
+    <link rel="stylesheet" type="text/css" href="_css/estilo.css">
+</head>
+<body>
+    <div id="interface">
+        <header id="cabecalho">
 
-[AQUI ENTRA UMA FOTO]
+            <hgroup>
+                <h1>Google Glass</h1>
+                <h2>A revolução do Google está chegando</h2>
+            </hgroup>
 
-Menu Principal
-- Home
-- Especificações
-- Fotos
-- Multimídia
-- Fale conosco
+            <img src="./_imagens/fotos.png">
+
+            <nav>
+                <h1>Menu Principal</h1>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="specs.html">Especificações</a></li>
+                    <li><a href="fotos.html">Fotos</a></li>
+                    <li><a href="multimidia.html">Multimídia</a></li>
+                    <li><a href="fale-conosco.html">Fale conosco</a></li>
+                </ul>
+            </nav>
+
+        </header>
 
 Glass > Fotos
 Galeria de Imagens do Google Glass
@@ -24,6 +46,13 @@ Veja na nossa galeria de fotos várias belas imagens que mostram algumas das pri
 - Vários tipos de lente
 - Informações importantes
 
-Copyright 2013 - by Gustavo Guanabara
-
-Facebook | Twitter
+        <footer>
+            <p>Feito com ❤️ por Eduardo da Paz. <br><br>
+                Contatos:
+                <a href="https://github.com/EduardoPazz" target="_blank">GitHub</a> |
+                <a href="https://www.linkedin.com/in/eduardo-da-paz/" target="_blank">LinkedIn</a>
+            </p>
+        </footer>
+    </div>
+</body>
+</html>
