--- a/projeto-glass-html5/google-glass.html
+++ b/projeto-glass-html5/google-glass.html
@@ -1,3 +1,37 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Tudo sobre o Google Glass</title>
+    <script src="_javascript/funcoes.js" defer></script>
+    <link rel="stylesheet" type="text/css" href="_css/estilo.css">
+</head>
+<body>
+    <div id="interface">
+        <header id="cabecalho">
+
+            <hgroup>
+                <h1>Google Glass</h1>
+                <h2>A revolução do Google está chegando</h2>
+            </hgroup>
+
+            <img src="_imagens/glass-oculos-preto-peq.png">
+
+            <nav>
+                <h1>Menu Principal</h1>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="specs.html">Especificações</a></li>
+                    <li><a href="fotos.html">Fotos</a></li>
+                    <li><a href="multimidia.html">Multimídia</a></li>
+                    <li><a href="fale-conosco.html">Fale conosco</a></li>
+                </ul>
+            </nav>
+
+        </header>
+
 Clique sobre as áreas destacadas em vermelho
 [AQUI ENTRA UMA FOTO]
 
@@ -12,7 +46,7 @@ Filme e fotografe a qualquer momento
 Com o Google Glass será possível tirar fotos com até 5 megapixels e gravar vídeos com 720 linhas de resolução. Os primeiros vídeos e fotos capturados com o aparelho já começaram a circular pela rede, mas até agora ninguém tem muitas informações técnicas.
 
 Sensores
-A sensibilidade de um simples óculos<
+A sensibilidade de um simples óculos
 Quem pensa que para comandar o Google Glass vai precisar de teclado e mouse, se engana redondamente. O dispositivo vem com vários tipos de sensores e microfones embutidos. Assim, para dar um comando, basta falar ou passar o dedo na lateral do óculos.
 [AQUI ENTRA UMA FOTO]
 
@@ -20,3 +54,14 @@ Bateria e Gadgets
 Quais são os dispositivos que complementam o Glass
 [AQUI ENTRA UMA FOTO]
 Segundo a própria Google, o Glass virá com uma bateria que tem autonomia suficiente para durar um dia inteiro. Apenas algumas atividades como videoconferências e longas filmagens vão exigir um pouco mais. Além disso ele vem com WiFi, Bluetooth, 3G/4G e muito mais.
+
+        <footer>
+            <p>Feito com ❤️ por Eduardo da Paz. <br><br>
+                Contatos:
+                <a href="https://github.com/EduardoPazz" target="_blank">GitHub</a> |
+                <a href="https://www.linkedin.com/in/eduardo-da-paz/" target="_blank">LinkedIn</a>
+            </p>
+        </footer>
+    </div>
+</body>
+</html>
