Setting the specs.html and the iframe for google-glass.html

--- a/projeto-glass-html5/specs.html
+++ b/projeto-glass-html5/specs.html
@@ -7,6 +7,7 @@
     <title>Tudo sobre o Google Glass</title>
     <script src="_javascript/funcoes.js" defer></script>
     <link rel="stylesheet" type="text/css" href="_css/estilo.css">
+    <link rel="stylesheet" href="./_css/specs.css">
 </head>
 <body>
     <div id="interface">
@@ -32,14 +33,28 @@
 
         </header>
 
-Glass > Especificações
-Raio-X no Google Glass
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+        <section>
+            <header>
+                <h3>Glass > Especificações</h3>
+                <h1>Raio-X no Google Glass</h1>
+                <h2>por Eduardo da Paz</h2>
+                <h3>Atualizado em 01/Maio/2013</h3>
+            </header>
+            
+            <p>Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.</p>
 
-Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.
-
-[AQUI ENTRA UMA IMAGEM]
+            <section class="conteudo">
+                <img src="_imagens/glass-esquema-marcado.jpg" alt="Esquema interativo das partes do óculos." usemap="#mapa">
+                <map name="mapa">
+                    <area shape="rect" coords="182,207,265,257" href="google-glass.html#tela" target="specs" alt="Redirecionamento para o article#tela">
+                    <area shape="circle" coords="158,244,10" href="google-glass.html#camera" target="specs" alt="Redirecionamento para o article#camera">
+                    <area shape="circle" coords="72,52,10" href="google-glass.html#gadgets
+                    " target="specs" alt="Redirecionamento para o article#gadgets">                    
+                    <area shape="poly" coords="27,145,81,216,82,249,,26,167" href="google-glass.html#sensores" target="specs" alt="Redirecionamento para o article#sensores">                    
+                </map>
+                <iframe name="specs" src="./google-glass.html" frameborder="0" sandbox="allow-scripts allow-same-origin" scrolling="no"></iframe>
+            </section>
+        </section>
 
         <footer>
             <p>Feito com ❤️ por Eduardo da Paz. <br><br>
