--- a/projeto-glass-html5/index.html
+++ b/projeto-glass-html5/index.html
@@ -32,7 +32,7 @@
 
         </header>
 
-        <section>
+        <section class="floatable">
     
             <header>
                 <hgroup>
