--- a/projeto-glass-html5/multimidia.html
+++ b/projeto-glass-html5/multimidia.html
@@ -7,6 +7,7 @@
     <title>Tudo sobre o Google Glass</title>
     <script src="_javascript/funcoes.js" defer></script>
     <link rel="stylesheet" type="text/css" href="_css/estilo.css">
+    <link rel="stylesheet" href="_css/media.css">
 </head>
 <body>
     <div id="interface">
@@ -32,16 +33,27 @@
 
         </header>
 
-Glass > Multimídia
-Sons e Vídeos
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+        <section>
+            <header>
+                <hgroup>
+                    <h3>Glass > Multimídia</h3>
+                    <h1>Sons e Vídeos</h1>
+                    <h2>por Eduardo da Paz</h2>
+                    <h3>Atualizado em 01/Maio/2013</h3>
+                </hgroup>
+            </header>
 
-
-Áudio e Vídeo
-
-[AQUI ENTRA UM VÍDEO]
-[AQUI ENTRA UM ÁUDIO]
+            <div id="multimidia">
+                <video controls poster="_imagens/video-mini03.jpg">
+                    <source src="_media/getting-started.mp4" type="video/mp4">
+                    <p>Seu navegador não pôde exibir este conteúdo, desculpe pelo incoveniente</p>
+                </video>
+                <audio controls>
+                    <source src="_media/2009-lovers-carvings-bibio.mp3" type="audio/mp3">
+                    <p>Seu navegador não pôde exibir este conteúdo, desculpe pelo incoveniente</p>
+                </audio>
+            </div>
+        </section>
 
         <footer>
             <p>Feito com ❤️ por Eduardo da Paz. <br><br>
