--- a/projeto-glass-html5/fale-conosco.html
+++ b/projeto-glass-html5/fale-conosco.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Tudo sobre o Google Glass</title>
-    <script src="_javascript/funcoes.js" defer></script>
+    <script src="_javascript/funcoes.js" defer></script>  
     <link rel="stylesheet" type="text/css" href="_css/estilo.css">
+    <link rel="stylesheet" href="_css/form.css">
 </head>
 <body>
     <div id="interface">
@@ -32,38 +33,112 @@
 
         </header>
 
-Fale Conosco > Contato
-Formulário de Contato
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+        <section>
+            <header>
+                <h3>Fale Conosco > Contato</h3>
+                <h1>Formulário de Contato</h1>
+                <h2>por Eduardo da Paz</h2>
+                <h3>Atualizado em 01/Maio/2013</h3>
+            </header>
 
-Identificação do Usuário
-    Nome:
-    Senha:
-    E-mail:
-    Sexo:
-        - Masculino
-        - Feminino
-    Data de Nascimento:
+            <form action="/" method="POST">
+                <fieldset id="contato">
+                    <legend>Identificação do Usuário</legend>
+                    <input type="text" name="" id="" placeholder="Nome">
+                    <input type="email" name="" id="" placeholder="E-mail"> 
+                    <input type="password" name="" id="" placeholder="Senha" minlength="8">
+                    <fieldset class="gen">
+                        <legend>Gênero</legend>
+                        <input type="radio" name="genero" id="masculino"><label for="masculino">Masculino</label> <br>
+                        <input type="radio" name="genero" id="feminino"><label for="feminino">Feminino</label> <br>
+                        <input type="radio" name="genero" id="undefined"><label for="undefined">Prefiro não informar</label>
+                    </fieldset>
+                    </select>
+                    <label for="dataNascimento">Data de Nascimento:</label>
+                    <input type="date" name="" id="dataNascimento" placeholder="Data de Nascimento">
+                </fieldset>
 
-Endereço do Usuário
-    Logradouro:
-    Número:
-    Estado:
-    Cidade:
+                <fieldset id="endereco">
+                    <legend>Endereço do Usuário</legend>
+                    <label for="logra">Logradouro:</label><input type="text" name="" id="logra" placeholder="Rua, Avenida ou semelhantes">
+                    <label for="numeroRua">Número:</label> <input type="number" name="" id="numeroRua" min="0" max="99999" placeholder="Número da rua">
+                    <label for="estado">Estado:</label>
+                    <select id="estado" name="estado">
+                        <optgroup label="Centro-Oeste">
+                            <option value="DF">Distrito Federal</option>
+                            <option value="GO">Goiás</option>
+                            <option value="MT">Mato Grosso</option>
+                            <option value="MS">Mato Grosso do Sul</option>
+                        </optgroup>
+                        <optgroup label="Sudeste">
+                            <option value="ES">Espírito Santo</option>
+                            <option value="MG">Minas Gerais</option>
+                            <option value="RJ">Rio de Janeiro</option>
+                            <option value="SP">São Paulo</option>
+                        </optgroup>
+                        <optgroup label="Sul">
+                            <option value="PR">Paraná</option>
+                            <option value="RS">Rio Grande do Sul</option>
+                            <option value="SC">Santa Catarina</option>
+                        </optgroup>
+                        <optgroup label="Nordeste">
+                            <option value="AL">Alagoas</option>
+                            <option value="BA">Bahia</option>
+                            <option value="CE">Ceará</option>
+                            <option value="MA">Maranhão</option>
+                            <option value="PB">Paraíba</option>
+                            <option value="PE">Pernambuco</option>
+                            <option value="PI">Piauí</option>
+                            <option value="RN">Rio Grande do Norte</option>
+                            <option value="SE">Sergipe</option>
+                        </optgroup>
+                        <optgroup label="Norte">
+                            <option value="AC">Acre</option>
+                            <option value="AP">Amapá</option>
+                            <option value="AM">Amazonas</option>
+                            <option value="PA">Pará</option>
+                            <option value="RO">Rondônia</option>
+                            <option value="RR">Roraima</option>
+                            <option value="TO">Tocantins</option>
+                        </optgroup>
+                    </select>
+                    <label for="cidade">Cidade:</label>
+                    <input type="text" name="" id="cidade" placeholder="Cidade" list="cidades">
+                    <datalist id="cidades">
+                        <option value="São Paulo">Capital</option>
+                        <option value="Rio de Janeiro">Capital</option>
+                    </datalist>
+                </fieldset>
 
-Mensagem do Usuário
-    Grau de Urgência:
-    Mensagem:
+                <fieldset id="mensagem">
+                    <legend>Mensagem do Usuário</legend>
+                    <label for="urgencia">Grau de Urgência:</label>
+                    <input type="range" name="" id="urgencia"><br>
+                    <label for="mensagem">Mensagem:</label>
+                    <textarea name="" id="mensagem" cols="50" rows="2" placeholder="Deixe sua mensagem"></textarea>
 
-Quero um Google Glass
-    Gostaria de adquirir um Google Glass quando disponível
-    Cor:
-    Quantidade:
-    Preço Total: R$
+                </fieldset>
 
+                <fieldset id="shopping">
+                    <legend>Quero um Google Glass</legend>
+                    <input type="checkbox" name="" id="adquerir"><label for="adquerir">Gostaria de adquirir um Google Glass quando disponível</label>
+                    <label for="cor">Cor:</label><input type="color" name="" id="cor">
+                    <label for="quant">Quantidade:</label>
+                    <input type="number" name="" id="quant" min="0" max="5" value="0">
+                    <label for="total">Preço Total:</label><input type="number" name="" id="total" readonly><label for="total">R$</label>
+                    <script>
+                        /* calculating the final cost of the glasses shopping in the meantime */
+                
+                        const quant = document.querySelector('#quant')
+                        const total = document.querySelector('#total')
+                
+                        quant.addEventListener('change', () => total.value = quant.value * 1500)
+                    </script>  
+                </fieldset>
 
-[BOTÃO ENVIAR]
+            <input type="image" src="_imagens/botao-enviar.png">
+            </form>
+        </section>
 
         <footer>
             <p>Feito com ❤️ por Eduardo da Paz. <br><br>
