Fixing titles on general | adding a favicon to all pages | updating footer on index.html

--- a/specs.html
+++ b/specs.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Tudo sobre o Google Glass</title>
+    <title>Especificações do Google Glass</title>
     <script src="_javascript/funcoes.js" defer></script>
     <link rel="stylesheet" type="text/css" href="_css/estilo.css">
     <link rel="stylesheet" href="./_css/specs.css">
+    <link rel="shortcut icon" href="_imagens/glass-oculos-preto-peq.png">
 </head>
 <body>
     <div id="interface">
