--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Tudo sobre o Google Glass</title>
+    <title>Google Glass</title>
     <script src="_javascript/funcoes.js" defer></script>
     <link rel="stylesheet" type="text/css" href="_css/estilo.css">
+    <link rel="shortcut icon" href="_imagens/glass-oculos-preto-peq.png">
 </head>
 <body>
     <div id="interface">
@@ -117,7 +118,7 @@
         </aside>
 
         <footer>
-            <p>Feito com ❤️ por Eduardo da Paz. <br><br>
+            <p>Feito com ❤️ por Eduardo da Paz. Obrigado <a href="https://www.linkedin.com/in/guanabara/" target="_blank">Gustavo Guanabara</a> e equipe <a href="https://www.linkedin.com/company/curso-em-vídeo/about/">Curso em Vídeo</a> pelos ensinamentos <br><br>
                 Contatos:
                 <a href="https://github.com/EduardoPazz" target="_blank">GitHub</a> |
                 <a href="https://www.linkedin.com/in/eduardo-da-paz/" target="_blank">LinkedIn</a>
